syntax = "proto3";
package bdt;

service Bdt {
    rpc GetData (BdtRequest) returns (BdtResponse);
}

message BdtRequest {
    string table = 1;
    repeated Column columns = 2;
    repeated Filter filters = 3;
    int32 page_number = 4;
    int32 results_per_page = 5;
}

message Column {
    string name = 1;
}

message Filter {
    string column = 1;
    string operator = 2;
    string value = 3;
}

message BdtResponse {
    repeated BdtRow rows = 1;
}

message BdtRow {
    map<string, string> values = 1;
}
