syntax = "proto3";
package tt.config;

service TtConfig {
    rpc GetData (BdtRequest) returns (TtConfigObject);
}

message BdtRequest {
    string query = 1;
}

message TtConfigObject {
    string config_type = 1;
    string config_value = 2;
    float config_num_value = 3;
}
